fix build failure

--- a/docs/emitters/typespec-autorest-canonical/reference/index.mdx
+++ b/docs/emitters/typespec-autorest-canonical/reference/index.mdx
@@ -34,3 +34,5 @@ npm install --save-peer @azure-tools/typespec-autorest-canonical
 ## Emitter usage
 
 [See documentation](./emitter.md)
+
+## AutorestCanonical
