switch to serverUrl

--- a/docs/howtos/DataPlane Generation - DPG/07tcgcTypes.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/07tcgcTypes.mdx
@@ -1408,7 +1408,7 @@ export type AccessFlags = "internal" | "public";
 ```ts
 export interface SdkEndpointType {
   kind: "endpoint";
-  baseUrl?: string;
+  serverUrl?: string;
   templateArguments: SdkPathParameter[];
 }
 ```
