--- a/docs/howtos/DataPlane Generation - DPG/04renaming.mdx
+++ b/docs/howtos/DataPlane Generation - DPG/04renaming.mdx
@@ -6,7 +6,7 @@ import TabItem from "@theme/TabItem";
 This page documents how to customize names for client generations in DPG. For an overview of the setup, please visit the setup page.
 
 :::note
-The TypeSpec compiler provide an `@encodedName` decorator that allows changing the name of the property for a given serialization format.
+The TypeSpec compiler provides an `@encodedName` decorator that allows changing the name of the property for a given serialization format.
 However in Azure we recommend that you define the property name as the value sent on the wire and use the `@clientName` decorator to change the name of the generated property.
 :::
 
